--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </div>
     </header>
 
-
     <main>
         <section class="section-one">
             <div class="container">
@@ -406,8 +405,86 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-form">
+                <p class="form-header">Subscribe</p>
+                <ul class="footer-form-list">
+                    <li>
+                        <input class="footer-form-email" type="email" placeholder="E-mail">
+                    </li>
+                    <li>
+                        <button class="footer-form-btn" type="button">Subscribe <svg class="footer-plane" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-plane"></use>
+                            </svg></button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <button class="modal-close" type="button">
+                <svg class="icon-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="modal-header">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="modal-field">
+                    <label for="username" class="modal-label">
+                        Name
+                        <div class="input-wrapper">
+                            <input class="modal-input" type="text" name="username" id="username">
+                            <svg width="18" height="18" class="modal-icon">
+                                <use href="./images/icons.svg#icon-person-black"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label for="tel" class="modal-label">
+                        Phone
+                        <div class="input-wrapper">
+                            <input class="modal-input" type="tel" name="usel-tel" id="tel">
+                            <svg width="18" height="18" class="modal-icon">
+                                <use href="./images/icons.svg#icon-phone-black"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label for="email" class="modal-label">
+                        Email
+                        <div class="input-wrapper">
+                            <input class="modal-input" type="email" name="user-email" id="email">
+                            <svg width="18" height="18" class="modal-icon">
+                                <use href="./images/icons.svg#icon-email-black"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label for="comment" class="modal-label">
+                        Comment
+                        <textarea class="modal-textarea" name="comment" id="comment"
+                            placeholder="Text input"></textarea>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <input class="modal-check visually-hidden" type="checkbox" name="privacy" id="privacy">
+                    <label class="modal-check-text" for="privacy">
+                        <span>
+                            <svg class="modal-check-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-vector"></use>
+                            </svg>
+                        </span>I accept the terms and conditions of the Privacy Policy
+                    </label>
+                </div>
+                <button class="modal-btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
