--- a/index.html
+++ b/index.html
@@ -407,17 +407,16 @@
             </div>
             <div class="footer-form">
                 <p class="form-header">Subscribe</p>
-                <ul class="footer-form-list">
-                    <li>
-                        <input class="footer-form-email" type="email" placeholder="E-mail">
-                    </li>
-                    <li>
-                        <button class="footer-form-btn" type="button">Subscribe <svg class="footer-plane" width="24"
-                                height="24">
-                                <use href="./images/icons.svg#icon-plane"></use>
-                            </svg></button>
-                    </li>
-                </ul>
+                <form class="footer-form-list">
+                    <label class="footer-form-email-label" for="footer-email">
+                        <input class="footer-form-email" name="email" type="email" placeholder="E-mail"
+                            id="footer-email">
+                    </label>
+                    <button class="footer-form-btn" type="submit">Subscribe<svg class="footer-plane" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-plane"></use>
+                        </svg></button>
+                </form>
             </div>
         </div>
     </footer>
