--- a/index.html
+++ b/index.html
@@ -431,53 +431,55 @@
             <p class="modal-header">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="modal-field">
-                    <label for="username" class="modal-label">
+                    <label for="user-name" class="modal-label">
                         Name
-                        <div class="input-wrapper">
-                            <input class="modal-input" type="text" name="username" id="username">
-                            <svg width="18" height="18" class="modal-icon">
-                                <use href="./images/icons.svg#icon-person-black"></use>
-                            </svg>
-                        </div>
                     </label>
+                    <div class="input-wrapper">
+                        <input class="modal-input" type="text" name="username" id="user-name">
+                        <svg width="18" height="24" class="modal-icon">
+                            <use href="./images/icons.svg#icon-person-black"></use>
+                        </svg>
+                    </div>
                 </div>
                 <div class="modal-field">
                     <label for="tel" class="modal-label">
                         Phone
-                        <div class="input-wrapper">
-                            <input class="modal-input" type="tel" name="usel-tel" id="tel">
-                            <svg width="18" height="18" class="modal-icon">
-                                <use href="./images/icons.svg#icon-phone-black"></use>
-                            </svg>
-                        </div>
                     </label>
+                    <div class="input-wrapper">
+                        <input class="modal-input" type="tel" name="usel-tel" id="tel">
+                        <svg width="18" height="24" class="modal-icon">
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </div>
                 </div>
                 <div class="modal-field">
                     <label for="email" class="modal-label">
                         Email
-                        <div class="input-wrapper">
-                            <input class="modal-input" type="email" name="user-email" id="email">
-                            <svg width="18" height="18" class="modal-icon">
-                                <use href="./images/icons.svg#icon-email-black"></use>
-                            </svg>
-                        </div>
                     </label>
+                    <div class="input-wrapper">
+                        <input class="modal-input" type="email" name="user-email" id="email">
+                        <svg width="18" height="24" class="modal-icon">
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </div>
                 </div>
-                <div class="modal-field">
-                    <label for="comment" class="modal-label">
+                <div class="modal-field-text">
+                    <label for="user-comment" class="modal-label">
                         Comment
-                        <textarea class="modal-textarea" name="comment" id="comment"
-                            placeholder="Text input"></textarea>
                     </label>
+                    <textarea class="modal-textarea" name="user-comment" id="user-comment"
+                        placeholder="Text input"></textarea>
                 </div>
-                <div class="modal-field">
-                    <input class="modal-check visually-hidden" type="checkbox" name="privacy" id="privacy">
-                    <label class="modal-check-text" for="privacy">
-                        <span>
+                <div class="modal-field-check">
+                    <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
+                        value="true">
+                    <label class="modal-check-text" for="user-privacy">
+                        <span class="modal-check-span">
                             <svg class="modal-check-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-vector"></use>
                             </svg>
-                        </span>I accept the terms and conditions of the Privacy Policy
+                        </span>I accept the terms and conditions of the <a class="modal-span-link" href=""> Privacy
+                            Policy</a>
                     </label>
                 </div>
                 <button class="modal-btn" type="submit">Send</button>
