--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         Name
                     </label>
                     <div class="input-wrapper">
-                        <input class="modal-input" type="text" name="username" id="user-name">
+                        <input class="modal-input" type="text" name="user-name" id="user-name">
                         <svg width="18" height="24" class="modal-icon">
                             <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
